# IF-Split

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: default.yaml  fold-aware.yaml  masterclass.yaml
examples/IF-Split-2026.05.31/: README.md  STATS.txt  config.yaml  manifest.json  manifest.summary.json  test.json  train.json  val.json
examples/IF-Split-2026.05.31/test/: metal_test.json  nucleic_acid_test.json  nucleotide_test.json  small_molecule_test.json
examples/IF-Split-2026.07.14/: README.md  STATS.txt  config.yaml  manifest.json  test.json  train.json  val.json
examples/IF-Split-2026.07.14/test/: metal_test.json  nucleic_acid_test.json  small_molecule_test.json
scripts/: audit_nico_histag.py  consume_split.py  eval_metal_tiering.py  eval_sm_tiering.py  eval_structural_clustering.py
src/ifsplit/: __init__.py  __main__.py  cli.py  cluster.py  config.py  dataset.py  download.py  enumerate.py  hydrate.py  ligands.py  manifest.py  parse.py  rcsb.py  schema.py  split.py
tests/: conftest.py  test_cli.py  test_config.py  test_download.py  test_enumerate_lock.py  test_integration.py  test_ligands.py  test_loader.py  test_pipeline.py  test_schema.py
