[project]
name = "if-split"
version = "0.2.0"
description = "Reproducible, date-pinned, ligand-aware train/val/test splitter for the PDB (LigandMPNN-style)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "WSobo" }]
keywords = ["protein", "pdb", "ligandmpnn", "dataset", "mmseqs2", "reproducibility"]

# Runtime deps. mmseqs2 is an EXTERNAL binary (not a pip package) and is
# version-pinned/logged at clustering time, not here.
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "gemmi>=0.6.5",
  "httpx>=0.27",
]

[project.optional-dependencies]
# Feature extras (installed on demand), not dev tooling.
torch = ["torch>=2.2"]
# `fetch` writes index.parquet when pyarrow is present (index.jsonl is always
# written, zero-dep). `uv sync --extra mlops` to enable the columnar index.
mlops = ["pyarrow>=15"]

[project.scripts]
if-split = "ifsplit.cli:main"

# Dev tooling lives in a PEP 735 dependency group, which `uv sync` installs by
# default. Not part of the published wheel's optional extras.
[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ifsplit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Lets `pytest` import the package without an editable install.
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: bugbear, SIM: flake8-simplify, RUF: ruff-specific.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
docstring-code-format = true
